<resources>
    <string name="app_name">Intent</string>
    <string name="intent_1">Explicit</string>
    <string name="intent_2">Implicit</string>
    <string name="belajar_intent">BELAJAR INTENT</string>
    <string name="who_are_you">Who are you?</string>
    <string name="i_am">I am</string>
    <string name="send">Send</string>
    <string name="hello">Hello</string>
    <string name="this_is_second_explicit_activity">This is second explicit activity</string>
    <string name="visit">Visit</string>
    <string name="intent_explicit_kamu_berhasil">Intent Explicit Kamu Berhasil!</string>
    <string name="intent_explicit">Intent Explicit</string>
    <string name="intent_implicit">Intent Implicit</string>
</resources>